adds spacing andellipses to end

--- a/lyrics.html
+++ b/lyrics.html
@@ -7,32 +7,32 @@
     <title>The Decemberists- Everything I Try to Do, Nothing Seems to Turn Out Right</title>
 </head>
 <body>
-The film was a bust, but we stayed to the ending
-Hair all a mussed but your clothes didn't look so bad
-And back on the street, the rain was descending
-In cold dirty sheets, so under the awning we sat
-And then you hailed yourself a yellow cab
-And I sat for a time by the valets in line
-And I read what you wrote on the card
-Above a cowboy you drew a big dark balloon
-Saying "try not to take it so hard"
-But there's this nagging suspicion that won't leave me alone tonight
-Its just that everything I try to do, nothing seems to turn out right
-We laid on our backs and stared at the ceiling
-Messed with your slacks, but ended up just holding your hand
-The rain will remain, the tv was telling
-A drip of the drain as your legs lifted brilliantly bent
-And fall to resting on the ottoman
-So we turned off the tube and we crawled to your room
-Leaving discarded clothes in our way
-And we both had some fun, though I twice bit my tongue
-And it lasted too long for my taste
-And there's this nagging suspicion that won't leave me alone tonight
-Its just that everything I try to do, nothing seems to turn out right
-And there's this nagging suspicion that won't leave me alone tonight
-Its just that everything I try to do, nothing seems to turn out right
-A wink and a wave and your off to your family's
-I sit and watch as the taxis lights distantly fade
-I guess I always thought it'd end this way
+The film was a bust, but we stayed to the ending<br>
+Hair all a mussed but your clothes didn't look so bad<br><br>
+And back on the street, the rain was descending<br>
+In cold dirty sheets, so under the awning we sat<br>
+And then you hailed yourself a yellow cab<br><br>
+And I sat for a time by the valets in line<br>
+And I read what you wrote on the card<br>
+Above a cowboy you drew a big dark balloon<br>
+Saying "try not to take it so hard"<br><br>
+But there's this nagging suspicion that won't leave me alone tonight<br>
+Its just that everything I try to do, nothing seems to turn out right<br><br>
+We laid on our backs and stared at the ceiling<br>
+Messed with your slacks, but ended up just holding your hand<br><br>
+The rain will remain, the tv was telling<br>
+A drip of the drain as your legs lifted brilliantly bent<br>
+And fall to resting on the ottoman<br><br>
+So we turned off the tube and we crawled to your room<br>
+Leaving discarded clothes in our way<br>
+And we both had some fun, though I twice bit my tongue<br>
+And it lasted too long for my taste<br><br>
+And there's this nagging suspicion that won't leave me alone tonight<br>
+It's just that everything I try to do, nothing seems to turn out right<br><br>
+And there's this nagging suspicion that won't leave me alone tonight<br>
+It's just that everything I try to do, nothing seems to turn out right<br><br>
+A wink and a wave and your off to your family's<br>
+I sit and watch as the taxis lights distantly fade<br>
+I guess I always thought it'd end this way...<br>
 </body>
 </html>
